[tool.black]

include = '\.pyi?$'

exclude = '''

/(

    \.git

  | \.envs

)/

'''

[tool.poetry]
name = "analysis_compendium"
version = "0.2.0"
description = ""
authors = ["Kresten Bertelsen <krb@teknologisk.dk>"]

[tool.poetry.dependencies]
python = "~3.10"
conda-lock = "^1.1.1"
streamlit = "1.34.0"
st-link-analysis = "0.3.0"
cryptography = "41.0.5"



[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"
